--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1"
+  },
+  "scripts": {
+    "deploy": "hexo clean && hexo g && hexo d"
   }
 }
